--- a/index.html
+++ b/index.html
@@ -5,12 +5,44 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/png" sizes="32x32" href="./Asset/favicon-32x32.png">
     <!-- link google font cdn -->
-    
-    <!-- link css file -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Barlow:wght@600&display=swap" rel="stylesheet">
+    <!-- link css file --><link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Fraunces:opsz,wght@9..144,700;9..144,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./Style/style.css">
     <title>Frontend Mentor | Sunnyside agency landing page</title>
 </head>
 <body>
-    
+    <main>
+        <header>
+            <nav class="navbar">
+                <!-- navbar logo -->
+                <div>
+                <a href="#"><img class="logo" src="./Asset/logo.svg" alt=""></a>
+                </div>
+
+                <div>
+                    <ul>
+                        <li><a href="#">About</a></li>
+                        <li><a href="#">Services</a></li>
+                        <li><a href="#">Projects</a></li>
+                        <li><button class="contactBtn" type="button">Contact</button></li>
+                    </ul>
+                </div>
+
+                <div class="divHamburger">
+                    <img class="hamburger" src="./Asset/icon-hamburger.svg" alt="">
+                </div>
+            </nav>
+        </header>
+
+        <section class="heroSection">
+
+        </section>
+    </main>
+
+    <script src="./Script/script.js"></script>
 </body>
 </html>
