--- a/index.html
+++ b/index.html
@@ -1,48 +1,86 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/png" sizes="32x32" href="./Asset/favicon-32x32.png">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./Asset/favicon-32x32.png"
+    />
     <!-- link google font cdn -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Barlow:wght@600&display=swap" rel="stylesheet">
-    <!-- link css file --><link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Fraunces:opsz,wght@9..144,700;9..144,900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./Style/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Barlow:wght@600&display=swap"
+      rel="stylesheet"
+    />
+    <!-- link css file -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Fraunces:opsz,wght@9..144,700;9..144,900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./Style/style.css" />
     <title>Frontend Mentor | Sunnyside agency landing page</title>
-</head>
-<body>
+  </head>
+  <body>
     <main>
-        <header>
-            <nav class="navbar">
-                <!-- navbar logo -->
-                <div>
-                <a href="#"><img class="logo" src="./Asset/logo.svg" alt=""></a>
-                </div>
+      <header>
+        <nav class="navbar">
+          <!-- navbar logo -->
+          <div>
+            <a href="#"><img class="logo" src="./Asset/logo.svg" alt="" /></a>
+          </div>
 
-                <div>
-                    <ul>
-                        <li><a href="#">About</a></li>
-                        <li><a href="#">Services</a></li>
-                        <li><a href="#">Projects</a></li>
-                        <li><button class="contactBtn" type="button">Contact</button></li>
-                    </ul>
-                </div>
+          <div>
+            <ul>
+              <li><a href="#">About</a></li>
+              <li><a href="#">Services</a></li>
+              <li><a href="#">Projects</a></li>
+              <li><button class="contactBtn" type="button">Contact</button></li>
+            </ul>
+          </div>
 
-                <div class="divHamburger">
-                    <img class="hamburger" src="./Asset/icon-hamburger.svg" alt="">
-                </div>
-            </nav>
-        </header>
+          <div class="divHamburger">
+            <img class="hamburger" src="./Asset/icon-hamburger.svg" alt="" />
+          </div>
+        </nav>
+        <div class="headingArrow">
+          <h1 class="weAre">we are creatives</h1>
+          <img class="downArrow" src="./Asset/icon-arrow-down.svg" alt="" />
+        </div>
+      </header>
 
-        <section class="heroSection">
+      <!-- hero section has two side -->
+      <section class="heroSection">
+        <!-- Left side -->
+        <div class="leftSideHero">
 
-        </section>
+        </div>
+
+        <!-- Right side -->
+        <div class="rightSideHero">
+            <!-- <img src="./Asset/desktop/image-transform.jpg" alt=""> -->
+        </div>
+      </section>
+
+       <!-- second section has two side -->
+      <section class="heroSection">
+        <!-- Left side -->
+        <div class="leftSideHero">
+            <!-- <img src="./Asset/desktop/image-stand-out.jpg" alt=""> -->
+        </div>
+
+        <!-- Right side -->
+        <div class="rightSideHero">
+            
+        </div>
+      </section>
     </main>
 
     <script src="./Script/script.js"></script>
-</body>
+  </body>
 </html>
