hero and second section complete

--- a/index.html
+++ b/index.html
@@ -48,7 +48,17 @@
 
     <section class="heroSection">
       <!-- Left side -->
-      <div class="leftSideHero"></div>
+      <div class="leftSideHero">
+        <div class="leftInnerHero">
+
+          <h1>Transform your <br> brand</h1>
+
+          <p>We are a full-service creative agency specializing in helping brands grow fast.
+            Engage your clients through compelling visuals that do most of the marketing for you.</p>
+
+          <a href="#">Learn more</a>
+        </div>
+      </div>
 
       <!-- Right side -->
       <div class="rightSideHero">
@@ -64,16 +74,38 @@
       </div>
 
       <!-- Right side -->
-      <div class="rightSideSecond"></div>
+      <div class="rightSideSecond">
+
+        <div class="rightInnerSecond">
+          <h1>Stand out to the right <br> audience</h1>
+
+          <p>Using a collaborative formula of designers, researchers, photographers, videographers, and copywriters,
+            we’ll build and extend your brand in digital places. </p>
+
+          <a href="#">Learn more</a>
+        </div>
+      </div>
     </section>
 
     <!-- third section has two side -->
     <section class="thirdSection">
       <!-- Left side -->
-      <div class="leftSidethird"></div>
+      <div class="leftSidethird">
+        <div>
+          <h1>Graphic design</h1>
+          <p>Great design makes you memorable. We deliver artwork that underscores your brand message and captures
+            potential clients’ attention.</p>
+        </div>
+      </div>
 
       <!-- Right side -->
-      <div class="rightSidethird"></div>
+      <div class="rightSidethird">
+        <div>
+          <h1>Photography</h1>
+          <p>Increase your credibility by getting the most stunning, high-quality photos that improve your business
+            image.</p>
+        </div>
+      </div>
     </section>
 
     <!-- fourth section has three box -->
@@ -148,9 +180,9 @@
         <img class="footerLogo" src="./Asset/logo.svg" alt="">
 
         <ul>
-          <li><a href="#">About</a></li>
-          <li><a href="#">Services</a></li>
-          <li><a href="#">Projects</a></li>
+          <li><a class="a" href="#">About</a></li>
+          <li><a class="a" href="#">Services</a></li>
+          <li><a class="a" href="#">Projects</a></li>
         </ul>
 
         <ul>
