--- a/index.html
+++ b/index.html
@@ -221,6 +221,17 @@
               <a href="#"><img src="./Asset/icon-pinterest.svg" alt="" /></a>
             </li>
           </ul>
+
+          <div class="hr"></div>
+
+          <div class="copyRight">
+            <h4>
+              Copyright &copy; 2023. Developed by
+              <a href="https://www.linkedin.com/in/ritesh-sharma-276b2325b/"
+                >Ritesh Sharma</a
+              >
+            </h4>
+          </div>
         </div>
       </footer>
     </main>
