--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <a href="#"><img class="logo" src="./Asset/logo.svg" alt="" /></a>
           </div>
 
-          <div>
+          <div class="menu">
             <ul>
               <li><a href="#">About</a></li>
               <li><a href="#">Services</a></li>
